k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tutordash
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tutordash
  template:
    metadata:
      labels:
        app: tutordash
    spec:
      # 1. INIT CONTAINERS (Migrations)
      containers:
        - name: app
          image: ghcr.io/skg17/tutordash2:cf0be6c8d6883f37eedb2ecb0f9627405015e5e7
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args: ["bundle exec rails server -b 0.0.0.0 -p 3000"]
          ports:
            - containerPort: 3000
      # 3. IMAGESECRETS
      imagePullSecrets:
        - name: ghcr-login-secret
